--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "coverage:check": "nyc check-coverage --satements 85 --branches 70 --functions 85 --lines 85",
     "coverage:report": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "release": "semantic-release pre && npm publish && semantic-release post",
-    "postinstall": "npm run build main; npm run clean:all"
+    "postinstall": "npm run build:main; npm run clean:all"
   },
   "repository": {
     "type": "git",
